# hoster

./: .gitignore  Cargo.toml  README.md  routes.example.toml
.github/workflows/: ci.yml  release.yml
.superpowers/research/: dns-providers-acme.md
docs/: deploying.md
docs/superpowers/handoffs/: 2026-07-19-reverse-proxy-backend-handoff.md
docs/superpowers/plans/: 2026-07-17-proxy-core.md  2026-07-18-dashboard-sidebar-redesign.md  2026-07-18-dashboard.md  2026-07-18-deploy-engine.md  2026-07-18-private-registry-auth.md  2026-07-19-builtin-tls-acme.md  2026-07-19-dns-providers.md  2026-07-19-multi-domain-routing.md  2026-07-19-reverse-proxy-backend.md
docs/superpowers/specs/: 2026-07-17-deploy-engine-design.md  2026-07-17-hoster-design.md  2026-07-18-dashboard-design.md  2026-07-18-dashboard-sidebar-redesign-design.md  2026-07-18-private-registry-auth-design.md  2026-07-18-project-env-and-config-view-design.md  2026-07-18-release-cicd-design.md  2026-07-19-builtin-tls-acme-design.md  2026-07-19-dns-providers-design.md  2026-07-19-multi-domain-routing-design.md  2026-07-19-reverse-proxy-backend-design.md
scripts/: install.sh
src/: acme.rs  api.rs  certs.rs  config.rs  dashboard.rs  dns.rs  docker.rs  engine.rs  imageref.rs  labels.rs  lib.rs  main.rs  nginx.rs  proxy.rs  readiness.rs  renewal.rs  routes_file.rs  routing.rs  runtime.rs  secrets.rs  session.rs  settings.rs  template.rs  tls.rs
src/ui/: components.rs  login.rs  mod.rs  overview.rs  project.rs  settings.rs  shell.rs  style.rs
tests/: api.rs  dashboard.rs  docker.rs  proxy.rs  websocket.rs
tests/support/: mod.rs
