[package]
name = "hoster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
bollard = "0.18"
bytes = "1"
futures-util = "0.3"
getrandom = "0.2"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
tokio-tungstenite = "0.24"
