[package]
name = "hoster"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
bollard = "0.18"
bytes = "1"
futures-util = "0.3"
getrandom = "0.2"
hickory-resolver = "0.26.1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1"] }
instant-acme = { version = "0.8.5", default-features = false, features = [
    "hyper-rustls",
    "rcgen",
    "ring",
] }
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
x509-parser = "0.18.1"

[dev-dependencies]
futures-util = "0.3"
rcgen = "0.14.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
tokio-tungstenite = "0.24"
